2007-11-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/result.cxx:
  - More detailed constraint error classes, thanks Peter Geoghegan
2007-10-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Made the way result objects work clearer, thanks Carlos Moreno
2007-09-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx, src/transaction_base.cxx, test/test003.cxx, test/test011.cxx,
 test/test022.cxx, test/test030.cxx, test/test092.cxx:
  - Added <cstring> and <cstdlib> includes where missing, thanks Roger Leigh
2007-09-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx, src/connection_base.cxx, src/result.cxx:
  - Added <cstring> include
2007-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Made esc() and esc_raw() public
2007-08-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for PQdescribePortal()
2007-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test088.cxx:
  - Test error handling in subtransactions, thanks Bert Hubert
2007-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Solution to application link problems, thanks Peter Geoghegan
2007-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Guess float precision if no numeric_limits, thanks Denis Dzyubenko
 win32/INSTALL.txt:
  - Yet more clarificatin, thanks Peter Geoghegan
2007-08-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/util.cxx:
  - Convert float types with full precision, thanks Denis Dzyubenko
 win32/INSTALL.txt:
  - Don't use same libpq for debug and release, thanks Peter Geoghegan
2007-08-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Made the bit about copying config headers a bit clearer.
2007-07-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx, test/test043.cxx:
  - Use difference_type instead of size_type to indicate positions
2007-07-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README: